--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codehub",
   "version": "1.0.0",
   "description": "An alternative front-end for Github profiles.",
+  "repository": "https://github.com/bvanslyke/codehub",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2017": "^6.24.1",
     "eslint": "^4.3.0",
     "eslint-plugin-react": "^7.1.0",
     "html-webpack-plugin": "^2.30.1",
