--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1
     }
 }
