--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2017": "^6.24.1",
     "eslint": "^4.3.0",
     "eslint-plugin-react": "^7.1.0",
+    "history": "^4.6.3",
     "html-webpack-plugin": "^2.30.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "redux-first-router": "^1.9.8",
+    "redux-first-router-link": "^1.1.3",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
   }
