--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "repository": "https://github.com/bvanslyke/codehub",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -23,6 +24,7 @@
     "eslint-plugin-react": "^7.1.0",
     "history": "^4.6.3",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^20.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
