--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,15 @@
 {
-    "presets": ["es2017"],
-    "plugins": ["transform-react-jsx"]
+    "presets": [
+        "es2017"
+    ],
+    "plugins": [
+        "transform-react-jsx"
+    ],
+    "env": {
+        "test": {
+            "plugins": [
+                "transform-es2015-modules-commonjs"
+            ]
+        }
+    }
 }
